# RideConnector

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: daily-feedback.yml
.github/workflows/: daily-push.yml  feedback.yml
ride_connector/: advice.py  ai.py  config.py  email_client.py  feedback.py  feedback_service.py  github_client.py  intervals_client.py  models.py  service.py  storage.py  wechat_client.py
ride_connector/jobs/: daily_push.py  feedback.py
tests/: test_advice.py  test_ai.py  test_email_client.py  test_feedback.py  test_feedback_service.py  test_intervals_client.py  test_service.py  test_wechat_client.py
