[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ride-connector"
version = "0.1.0"
description = "Daily Intervals.icu cycling briefing pushed via WeChat template messages."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
